<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E91E63"
    tools:context="com.enesinky.demo.audiotranscription.AudioFileActivity">


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/choose_file"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="340dp"
        android:layout_height="480dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineHeight="16dp"
            android:paddingHorizontal="6dp"
            android:paddingVertical="4dp"
            android:text="@string/output"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:targetApi="p" />

    </ScrollView>

    <TextView
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="8dp"
        android:text="@string/clear"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/scrollView"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />


</androidx.constraintlayout.widget.ConstraintLayout>